--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+ASAAS_SANDBOX_KEY=
+ASAAS_SANDBOX_URL=https://sandbox.asaas.com/api/v3
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
@@ -42,8 +45,6 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
-
-ASSAS_KEY= 
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
