--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
     # imagem micro 01
-    api_assas:
+    api_asaas:
         build:
             args:
                 user: admin
@@ -14,9 +14,9 @@ services:
         volumes:
             - ./:/var/www
         networks:
-            - apiassas
+            - apiasaas
         links:
-            - db_api_assas
+            - db_api_asaas
 
     # nginx
     nginx:
@@ -29,11 +29,11 @@ services:
             - ./:/var/www
             - ./docker/nginx/:/etc/nginx/conf.d/
         networks:
-            - apiassas
+            - apiasaas
 
     # mysql micro 01
-    db_api_assas:
-        container_name: db_api_assas
+    db_api_asaas:
+        container_name: db_api_asaas
         image: mysql:8.0
         restart: unless-stopped
         environment:
@@ -49,10 +49,10 @@ services:
                 --collation-server=utf8mb4_unicode_ci
                 --default-authentication-plugin=mysql_native_password --sql-mode=""
         networks:
-            - apiassas
+            - apiasaas
 
 
 
 networks:
-    apiassas:
+    apiasaas:
         driver: bridge
